# gamedata

./: .gitignore  README.md  README_local.md  Untitled.ipynb  pyproject.toml  relative_time.ipynb  repair_uv_venv.sh  run_spark.sh  update.sh
analysis/: 300万台到達.ipynb  PS345ロンチ分析.ipynb  PS345ロンチ分析pandas.ipynb  PS345ロンチ分析pyspark.ipynb  PS4PS5_FF.ipynb  Switch分析.ipynb  cumulative_graph.ipynb  data_utils.py  dev_hard_sales.ipynb  gpt_prompt.txt  hardsales_utils.py  normalize.ipynb  pyspark_sample.py  sampleNewFile.ipynb  各年毎のシェア.ipynb  年単位売上.ipynb  年単位売上_PS.ipynb  累計pyspark.ipynb  累計pyspark2.ipynb  累計グラフ.ipynb  週販移動平均.ipynb
analyzed/: 2022data.ipynb  hw20220517.ipynb  pyspark_01.ipynb  累計グラフ.ipynb
clean/: hw_all.pkl  hw_clean.py  hw_cumsum.pkl  hw_year.pkl  multi_index.ipynb
data_source/: README.md  build.sh  hard_weekly_init.csv  union_datasources.py
database/: README.md  create_tables.sql  hard_info.csv  hard_weekly.csv  init_database.sh  update_tables.sql
docs/: gamedata.html  index.html  search.js
gamedata/: __init__.py  chart_hard.py  hard_event.py  hard_info.py  hard_sales.py  plot_hard.py  plot_utils.py  util.py
processed/: build.py  hard_launch_cumsum.csv  hard_weekly.csv  hard_weekly.pkl  hard_weekly_cumsum.pkl  hw_sum.py  prepare.ipynb  weekly_hard_1999_2022.pkl
public/: _redirects  index.html  notebook.css  weekly_report_20250817.html  weekly_report_20250824.html  weekly_report_20250831.html  weekly_report_20250907.html  weekly_report_20250914.html  weekly_report_20250921.html  weekly_report_20250928.html  weekly_report_20251005.html  weekly_report_20251012.html  weekly_report_20251019.html  weekly_report_20251026.html  weekly_report_20251102.html  weekly_report_20251109.html  weekly_report_20251116.html  weekly_report_20251123.html  weekly_report_20251130.html  weekly_report_20251207.html  weekly_report_20251214.html  weekly_report_20251221.html  weekly_report_20251228.html
raw/: hwdata.py  hwdata_2016.csv  hwdata_2019.csv  hwdata_2020.csv  hwdata_2022.csv  hwdata_old.csv  hwolddata.py
tests/: conftest.py  test_chart_embed_options.py  test_chart_hard.py  test_hard_event.py  test_hard_info.py  test_mode.py  (+13 more)
(+301 files in other folders)
