[project]
name = "gamedata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "cachecontrol>=0.14.4",
    "filelock>=3.20.1",
    "ipympl>=0.9.8",
    "japanize-matplotlib>=1.1.3",
    "jupyter>=1.1.1",
    "kanjize>=1.6.1",
    "marimo>=0.18.4",
    "matplotlib>=3.10.8",
    "mplcursors>=0.6",
    "pandas>=2.3.3",
    "setuptools>=80.9.0",
]

# プロジェクト自体をパッケージとして認識させる設定
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gamedata"]

[tool.hatch.build.targets.wheel.sources]
src = ""

