[project]
name = "gamedata"
version = "0.1.0"
description = "Gamedata analyis tools"
readme = "README.md"
requires-python = ">=3.10, <3.12"
dependencies = [
    "bs4>=0.0.2",
    "cachecontrol>=0.14.4",
    "filelock>=3.20.1",
    "ipympl>=0.9.8",
    "japanize-matplotlib>=1.1.3",
    "jupyter>=1.1.1",
    "kanjize>=1.6.1",
    "marimo>=0.23.1",
    "matplotlib>=3.10.8",
    "mplcursors>=0.6",
    "pandas>=2.3.3",
    "setuptools>=80.9.0",
    "polars>=1.37.1",
    "pyarrow>=23.0.1",
]

# プロジェクト自体をパッケージとして認識させる設定
[build-system]
requires = ["setuptools >= 75.0"]     # 75以上推奨（editable installが安定）
build-backend = "setuptools.build_meta"

# src-layout を正しく扱うための設定（src/gamedata/ の中身をパッケージとして認識）
[tool.setuptools.packages.find]
where = ["src"]          # src フォルダ以下を探す
namespaces = false       # 必要に応じて（通常 false でOK）

# 必要に応じて追加（オプション）
# [tool.setuptools]
# package-dir = {"" = "src"}
